--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,3 @@
-/* ~~~~~ BS ~~~~~ */
-
 html {
     line-height: 1.15;
     font-size: 1em;
@@ -29,27 +27,30 @@ html {
 }
 
 @font-face {
-    font-family: "Austin";
-    src: url(/fonts/Austin-Medium-Cy-Web.woff2) format("woff2");
+    font-family: Austin;
+    src: url(fonts/Austin-Medium-Cy-Web.woff2) format("woff2");
     font-weight: normal;
     font-style: normal;
     font-stretch: normal;
+    font-display: fallback;
 }
 
 @font-face {
-    font-family: "Austin";
-    src: url(/fonts/Austin-Italic-Cy-Web.woff2) format("woff2");
-    font-weight: normal;
-    font-style: italic;
-    font-stretch: normal;
-}
-
-@font-face {
-    font-family: "StyreneB";
-    src: url(/fonts/StyreneB-Regular-Cy-Web.woff2) format("woff2");
+    font-family: Austin Italic;
+    src: url(fonts/Austin-Italic-Cy-Web.woff2) format("woff2");
     font-weight: normal;
     font-style: normal;
     font-stretch: normal;
+    font-display: fallback;
+}
+
+@font-face {
+    font-family: StyreneB;
+    src: url(fonts/StyreneB-Regular-Cy-Web.woff2) format("woff2");
+    font-weight: normal;
+    font-style: normal;
+    font-stretch: normal;
+    font-display: fallback;
 }
 
 body {
@@ -60,7 +61,7 @@ body {
     margin: 0 auto;
     max-width: 90vw;
     min-height: 100vh;
-    font-family: "StyreneB", Fallback, sans-serif;
+    font-family: "StyreneB", sans-serif;
     font-feature-settings: "ss01", "kern" 1;
     font-weight: 400;
     line-height: 1.45;
@@ -77,7 +78,7 @@ h2,
 h3,
 h4 {
     margin: 2.75rem 0 1rem;
-    font-family: "Austin", Fallback, serif;
+    font-family: "Austin", serif;
     font-weight: 400;
     line-height: 1.15;
     -webkit-font-feature-settings: "cswh", "swsh", "dlig";
@@ -111,7 +112,7 @@ blockquote::after {
 }
 q:lang(ru) {
     quotes: "\201C""\201D"; /* "“" "”"; "«" "»" */
-    font: italic 1.999em/1.15 Austin, serif;
+    font: 1.999em/1.15 Austin Italic, serif;
 }
 q:lang(ru)::before,
 q:lang(ru)::after {
@@ -151,8 +152,6 @@ img {
     border-image-slice: 100%;
     border-image-slice: 1;
 }
-
-/* ========= LT ========= */
 
 header > section {
     grid-area: 2/1;
