--- a/css/main.css
+++ b/css/main.css
@@ -91,7 +91,7 @@ body {
     max-width: 90vw;
     min-height: 100vh;
     font-family: "StyreneB", sans-serif;
-    font-feature-settings: "ss01", "kern" 1;
+    font-feature-settings: "ss01", "kern";
     font-weight: 400;
     line-height: 1.45;
     color: var(--color-bd);
