--- a/css/main.css
+++ b/css/main.css
@@ -184,7 +184,7 @@ header > section {
     width: 100%;
 }
 header > .main-img {
-    --bg-img: url("/images/img1.jpg");
+    --bg-img: url("/img/1.jpg");
     background: content-box top / cover no-repeat var(--bg-img);
     width: 100%;
     height: 100vh;
